--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
             background-color: rgb(239, 18, 92);
             padding: 2px 120px;
             border: 0px;
-            color: white;
+            color: whitesmoke;
             font-weight: bolder;
             font-size: 17px;
         }
