--- a/whatwe/whatwe.html
+++ b/whatwe/whatwe.html
@@ -46,6 +46,15 @@
             margin-top: -50px;
             height: 80px;
         }
+        
+        #botsig {
+            background-color: rgb(239, 18, 92);
+            color: white;
+            border: 0px;
+            font-weight: bolder;
+            padding: 6px 5px;
+            margin-top: 20px;
+        }
     </style>
 
 </head>
@@ -57,7 +66,7 @@
         <div id="right">
             <div><img src="https://cdn.lovesavingsgroup.com/logos/indiegogo.png" alt=""></div>
             <div> Explore</div>
-            <div><a href="whatwe.html"> What We Do</a></div>
+            <div><a style="text-decoration:none ;color: black;" href="whatwe.html"> What We Do</a></div>
         </div>
 
         <div id="left">
@@ -77,7 +86,8 @@
     <!-- for video................ -->
 
     <div id="video">
-        <video src="C:\Users\user\Desktop\video" controls>not</video>
+
+        <iframe width="690" height="415" src="https://www.youtube.com/embed/bJCs-5gUFp4" title="YouTube video player" frameborder="20" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <h1>Fund the next big thing</h1>
         <p>Indiegogo's crowdfunding campaigns are where new and groundbreaking products take flight, sometimes long before they hit mainstream availability. With thousands of campaigns launching every week, there's great tech, design, and much more around
             every corner — often with limited-time perks and pricing for the earliest backers. Before it's everywhere, it's on Indiegogo.</p>
@@ -193,13 +203,19 @@
         </div>
         <div>
             <p>ABOUT</p>
-            <p>About Us Blog Trust & Safety Help & Support Press Careers Contact
+            <p>About Us
             </p>
+            <p>Blog Trust & Safety</p>
+            <p>Help & Support Press Careers Contact</p>
         </div>
         <div>
             <p>ENTREPRENEURS</p>
-            <p>How It Works Indiegogo vs. Kickstarter Education Center Experts Directory Fees Enterprise China
+            <p>How It Works
             </p>
+            <p> Indiegogo vs. Kickstarter </p>
+            <p>Education Center</p>
+            <p> Experts Directory Fees</p>
+            <p>Enterprise China</p>
         </div>
         <div id="footerimg">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTK-an8sneaSwI303g56ftpC7uR6niM6ePLKA&usqp=CAU" alt="">
@@ -209,7 +225,7 @@
                 <p>Discover new and clever products in the Indiegogo newsletter</p>
                 <input type="email" placeholder="Your email address">
                 <input style="display:inline ;" type="checkbox"> <span> I agree to the Terms of Use and have read and understand the Privacy Policy</span>
-                <input type="submit" value="SIGN ME UP">
+                <input id="botsig" type="submit" value="SIGN ME UP">
             </form>
 
         </div>
